[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = "0.9.1"

bevy_rapier2d = { version="0.19", features=["debug-render"] }
bevy_egui = "0.17"
iyes_loopless = "0.9"

rand = "0.8.5" 

glam = "0.21.2"
interpolation = "0.2.0"
benimator = {version="4.0.0-alpha.9", features=["bevy-08"] }
strum = "0.24"
strum_macros = "0.24"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
